--- a/api-reservations/pom.xml
+++ b/api-reservations/pom.xml
@@ -15,12 +15,15 @@
     <description>api-reservations</description>
     <properties>
         <java.version>17</java.version>
+        <maven.version>3.8.3</maven.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <springdoc-openapi-starter-webmvc-ui.version>2.1.0</springdoc-openapi-starter-webmvc-ui.version>
 
         <junit.version>5.10.1</junit.version>
         <mockito.version>5.4.0</mockito.version>
         <junit-platform-launcher.version>1.8.2</junit-platform-launcher.version>
+        <instancio-junit.version>5.2.1</instancio-junit.version>
+        <datafaker.version>2.3.0</datafaker.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
@@ -107,14 +110,15 @@
         <dependency>
             <groupId>org.instancio</groupId>
             <artifactId>instancio-junit</artifactId>
-            <version>5.2.1</version>
+            <version>${instancio-junit.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>net.datafaker</groupId>
             <artifactId>datafaker</artifactId>
-            <version>2.3.0</version>
+            <version>${datafaker.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -175,7 +179,7 @@
                                     <version>${java.version}</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
-                                    <version>3.8.3</version>
+                                    <version>${maven.version}</version>
                                 </requireMavenVersion>
                             </rules>
                         </configuration>
@@ -191,6 +195,7 @@
                     <groups>${activeGroups}</groups>
                 </configuration>
             </plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
